--- a/style.css
+++ b/style.css
@@ -13,8 +13,53 @@ h1{
     text-align: center;
 }
 
-.disc{
+.disc {
+    position: relative;
     border-radius: 50%;
     width: 50px;
     height: 50px;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    animation: yourAnimation 1s ease-in 0s normal none;
+}
+
+.disc[data-color="red"] {
+    background: radial-gradient(
+    #bd3e3e 0%, 
+    rgb(177, 23, 23) 100%);
+    border: ridge 5px #e44040;
+}
+
+.disc[data-color="black"] {
+    background: radial-gradient(
+    #202020 0%, 
+    rgb(24, 22, 22) 100%);
+    border: ridge 5px #4c4747;
+}
+
+@keyframes yourAnimation {
+    0.0%{
+        transform: translate(0, -300px);
+        height: 100%;
+    }
+    50%{
+        height: 98%;
+        transform: translate(0);
+    }
+    56%{
+        height: 80%;
+        transform: translate(0, 10px);
+    }
+    65%{
+        transform: translate(0, 25px);
+        height: 50%;
+    }
+    85%{
+        transform: translate(0);
+        height: 100%;
+    }
+    100%{
+        height: 100%;
+        transform: translate(0);
+    }
 }
