--- a/style.css
+++ b/style.css
@@ -1,12 +1,33 @@
+body, main, div, html{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .line{
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
+    border-radius: 88.75px;
+    width: 32px;
+    height: 32px;
+    margin: 8px 1.7px 8px 1.7px;
+    box-shadow: inset 0 0 0.4em rgb(53 53 53);
+    background-color: white;
+}
+
+main{
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #game-container{
     display: flex;
     justify-content: center;
+    border-radius: 20px;
+    background-color: #9F8AC0;
+    align-items: center;
+    width: calc(40px * 7 + 7px);
+    height: calc(44px * 6 + 7px);
 }
 
 h1{
@@ -14,7 +35,40 @@ h1{
 }
 
 .disc{
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    border-radius: 88.75px;
+    width: 32px;
+    height: 32px;
+}
+
+@media (min-width: 425px){
+
+    #game-container{
+        width: calc(49px * 7 + 7px);
+        height: calc(53px * 6 + 7px);
+    }
+    .line, .disc{
+        width: 40px;
+        height: 40px;
+    }
+}
+
+@media (min-width: 600px){
+    #game-container{
+        width: calc(50px * 7 + 7px);
+        height: calc(54px * 6 + 7px);
+    }
+    .line, .disc{
+        width: 40px;
+        height: 40px;
+    }
+}
+@media (min-width: 768px){
+     #game-container{
+        width: calc(58px * 7 + 7px);
+        height: calc(62px * 6 + 7px);
+        }
+    .line, .disc{
+        width: 47px;
+        height: 47px; 
+    }
 }
