--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body, main, div, html{
     box-sizing: border-box;
 }
 
+body{
+    height: 100vh;
+    overflow: hidden;
+    background-color: #ABE9CD;
+    background-image: linear-gradient(315deg, #ABE9CD 0%, #3EADCF 74%);
+}
+
 .line{
     border-radius: 88.75px;
     width: 32px;
@@ -11,6 +18,7 @@ body, main, div, html{
     margin: 8px 1.7px 8px 1.7px;
     box-shadow: inset 0 0 0.4em rgb(53 53 53);
     background-color: white;
+    border: 1px solid black;
 }
 
 main{
@@ -28,6 +36,7 @@ main{
     align-items: center;
     width: calc(40px * 7 + 7px);
     height: calc(44px * 6 + 7px);
+    border: solid rgb(82 80 80) 2px;
 }
 
 h1{
@@ -41,12 +50,15 @@ h1{
 }
 
 @media (min-width: 425px){
-
     #game-container{
         width: calc(49px * 7 + 7px);
         height: calc(53px * 6 + 7px);
     }
-    .line, .disc{
+    .line{
+        width: 40px;
+        height: 40px;
+    }
+    .disc{
         width: 40px;
         height: 40px;
     }
@@ -54,29 +66,42 @@ h1{
 
 @media (min-width: 600px){
     #game-container{
-        width: calc(50px * 7 + 7px);
-        height: calc(54px * 6 + 7px);
+        width: calc(54px * 7 + 7px);
+        height: calc(58px * 6 + 7px);
     }
-    .line, .disc{
-        width: 40px;
-        height: 40px;
+    .line{
+        width: 44px;
+        height: 44px;
+    }
+    .disc{
+        width: 44px;
+        height: 44px;
     }
 }
+
 @media (min-width: 768px){
-     #game-container{
-        width: calc(58px * 7 + 7px);
-        height: calc(62px * 6 + 7px);
+    #game-container{
+        width: calc(60px * 7 + 7px);
+        height: calc(64px * 6 + 7px);
         }
-    .line, .disc{
-        width: 47px;
-        height: 47px; 
+    .line{
+        width: 50px;
+        height: 50px; 
+    }
+    .disc{
+        width: 50px;
+        height: 50px; 
+    }
+    .column:hover{
+        background-color: #8A79A5;
+        border-radius: 10px;
+        cursor: pointer;
     }
 }
+
 .disc {
     position: relative;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     animation: yourAnimation 1s ease-in 0s normal none;
