--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     background-image: linear-gradient(315deg, #ABE9CD 0%, #3EADCF 74%);
 }
 
+.victoryScreen.hidden {
+    display: none;
+}
+
 .line{
     border-radius: 88.75px;
     width: 32px;
@@ -49,6 +53,176 @@ h1{
     height: 32px;
 }
 
+.disc {
+    position: relative;
+    border-radius: 50%;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    animation: yourAnimation 1s ease-in 0s normal none;
+}
+
+.disc[data-color="red"] {
+    background: radial-gradient(
+    #bd3e3e 0%, 
+    rgb(177, 23, 23) 100%);
+    border: ridge 5px #e44040;
+}
+
+.disc[data-color="black"] {
+    background: radial-gradient(
+    #202020 0%, 
+    rgb(24, 22, 22) 100%);
+    border: ridge 5px #4c4747;
+}
+
+#footerDiscRed{
+    background: radial-gradient(
+    #bd3e3e 0%, 
+    rgb(177, 23, 23) 100%);
+    border: ridge 5px #e44040;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#footerDiscBlack{
+    background: radial-gradient(
+    #202020 0%, 
+    rgb(24, 22, 22) 100%);
+    border: ridge 5px #4c4747;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.arrowRight{
+
+}
+
+@keyframes yourAnimation {
+    0.0%{
+        transform: translate(0, -300px);
+        height: 100%;
+    }
+    50%{
+        height: 98%;
+        transform: translate(0);
+    }
+    56%{
+        height: 80%;
+        transform: translate(0, 10px);
+    }
+    65%{
+        transform: translate(0, 25px);
+        height: 50%;
+    }
+    85%{
+        transform: translate(0);
+        height: 100%;
+    }
+    100%{
+        height: 100%;
+        transform: translate(0);
+    }
+}
+
+
+.victoryScreen {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    animation: victoryScreenCall .5s ease-in-out 0s forwards;
+    content: "";
+    position: absolute;
+    bottom: 50%;
+    transform: translateY(48%);
+    width: calc(40px * 7 + 7px);
+    height: calc(40px * 6 + 7px);
+    max-width: 400px;
+    z-index: -1;
+    box-shadow: 0 5px 10px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 2.9px );
+    border-radius: 5px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    animation: victoryScreenBlur 1s linear 0.5s forwards;
+    opacity: 0;
+}
+
+.playersDiv{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
+#counterContainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
+
+.scores{
+    font-size: 30px;
+}
+
+.player1{
+    background: radial-gradient(
+    #bd3e3e 0%, 
+    rgb(177, 23, 23) 100%);
+    border: ridge 5px #e44040;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.player2{
+    background: radial-gradient(
+    #202020 0%, 
+    rgb(24, 22, 22) 100%);
+    border: ridge 5px #4c4747;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#playAgain{
+width: 151px;
+height: 49px;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+background: radial-gradient(50% 50% at 50% 50%, #FF0000 0%, rgba(3, 3, 3, 0.75) 100%);
+border-radius: 16px;
+text-align: center;
+color: #FFECEC;
+}
+
+@keyframes victoryScreenCall {
+    0.0%{
+        transform: scale(0);
+    }
+    60%{
+        transform: scale(1.2);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+@keyframes victoryScreenBlur {
+    to {
+        display: block;
+        opacity: 1;
+        z-index: 1;
+    }
+}
+
+
 @media (min-width: 425px){
     #game-container{
         width: calc(49px * 7 + 7px);
@@ -61,6 +235,11 @@ h1{
     .disc{
         width: 40px;
         height: 40px;
+    }
+
+    .victoryScreen{
+        width: calc(49px * 7 + 7px);
+        height: calc(49px * 6 + 7px);
     }
 }
 
@@ -97,97 +276,11 @@ h1{
         border-radius: 10px;
         cursor: pointer;
     }
-}
 
-.disc {
-    position: relative;
-    border-radius: 50%;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    animation: yourAnimation 1s ease-in 0s normal none;
-}
-
-.disc[data-color="red"] {
-    background: radial-gradient(
-    #bd3e3e 0%, 
-    rgb(177, 23, 23) 100%);
-    border: ridge 5px #e44040;
-}
-
-.disc[data-color="black"] {
-    background: radial-gradient(
-    #202020 0%, 
-    rgb(24, 22, 22) 100%);
-    border: ridge 5px #4c4747;
-}
-
-@keyframes yourAnimation {
-    0.0%{
-        transform: translate(0, -300px);
-        height: 100%;
-    }
-    50%{
-        height: 98%;
-        transform: translate(0);
-    }
-    56%{
-        height: 80%;
-        transform: translate(0, 10px);
-    }
-    65%{
-        transform: translate(0, 25px);
-        height: 50%;
-    }
-    85%{
-        transform: translate(0);
-        height: 100%;
-    }
-    100%{
-        height: 100%;
-        transform: translate(0);
-    }
-}
-
-
-.victoryScreen {
-    position: relative;
-    animation: victoryScreenCall .5s ease-in-out 0s forwards;
-}
-
-.victoryScreen::before {
-    content: "";
-    position: absolute;
-    bottom: 50%;
-    transform: translateY(-50%);
-    width: 89vw;
-    height: 50vw;
-    max-width: 400px;
-    max-height: 350px;
-    z-index: -1;
-    box-shadow: 0 5px 10px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 2.9px );
-    border-radius: 5px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    animation: victoryScreenBlur 1s linear 0.5s forwards;
-    opacity: 0;
-}
-
-@keyframes victoryScreenCall {
-    0.0%{
-        transform: scale(0);
-    }
-    60%{
-        transform: scale(1.2);
-    }
-    100%{
-        transform: scale(1);
-    }
-}
-
-@keyframes victoryScreenBlur {
-    to {
-        display: block;
-        opacity: 1;
-        z-index: 1;
+    .victoryScreen {
+        width: calc(60px * 7 + 7px);
+        height: calc(64px * 6 + 7px);
+        max-height: 100%;
+        max-width: 100%;
     }
 }
