--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500;600;700&family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 body, main, div, html{
     margin: 0;
     padding: 0;
@@ -5,10 +8,14 @@ body, main, div, html{
 }
 
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100vh;
     overflow: hidden;
     background-color: #ABE9CD;
     background-image: linear-gradient(315deg, #ABE9CD 0%, #3EADCF 74%);
+    font-family: 'Baloo Tammudu 2', cursive;
 }
 
 .victoryScreen.hidden {
@@ -45,6 +52,7 @@ main{
 
 h1{
     text-align: center;
+    font-family:'Staatliches', cursive;
 }
 
 .disc{
@@ -98,36 +106,26 @@ h1{
 }
 
 .arrowRight{
-
+    background-image: url("blackTurn.svg");
+    width: 73px;
+    height: 41px;
 }
 
-@keyframes yourAnimation {
-    0.0%{
-        transform: translate(0, -300px);
-        height: 100%;
-    }
-    50%{
-        height: 98%;
-        transform: translate(0);
-    }
-    56%{
-        height: 80%;
-        transform: translate(0, 10px);
-    }
-    65%{
-        transform: translate(0, 25px);
-        height: 50%;
-    }
-    85%{
-        transform: translate(0);
-        height: 100%;
-    }
-    100%{
-        height: 100%;
-        transform: translate(0);
-    }
+.arrowLeft{
+    background-image: url("redTurn.svg");
+    width: 73px;
+    height: 41px;
 }
 
+#footer{
+    display: flex;
+    justify-content: space-evenly;
+    width: calc(40px * 7 + 7px);
+}
+
+.drawDiv{
+    transform: translateX(-6%);
+}
 
 .victoryScreen {
     display: flex;
@@ -135,7 +133,7 @@ h1{
     justify-content: space-around;
     align-items: center;
     position: relative;
-    animation: victoryScreenCall .5s ease-in-out 0s forwards;
+    animation: victoryScreenCall .1s ease-in-out 0s forwards;
     content: "";
     position: absolute;
     bottom: 50%;
@@ -193,13 +191,41 @@ h1{
 }
 
 #playAgain{
-width: 151px;
-height: 49px;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-background: radial-gradient(50% 50% at 50% 50%, #FF0000 0%, rgba(3, 3, 3, 0.75) 100%);
-border-radius: 16px;
-text-align: center;
-color: #FFECEC;
+    width: 151px;
+    height: 49px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background: radial-gradient(50% 50% at 50% 50%, #FF0000 0%, rgba(3, 3, 3, 0.75) 100%);
+    border-radius: 16px;
+    text-align: center;
+    color: #FFECEC;
+    cursor: pointer;
+}
+
+@keyframes yourAnimation {
+    0.0%{
+        transform: translate(0, -300px);
+        height: 100%;
+    }
+    50%{
+        height: 98%;
+        transform: translate(0);
+    }
+    56%{
+        height: 80%;
+        transform: translate(0, 10px);
+    }
+    65%{
+        transform: translate(0, 25px);
+        height: 50%;
+    }
+    85%{
+        transform: translate(0);
+        height: 100%;
+    }
+    100%{
+        height: 100%;
+        transform: translate(0);
+    }
 }
 
 @keyframes victoryScreenCall {
@@ -241,6 +267,16 @@ color: #FFECEC;
         width: calc(49px * 7 + 7px);
         height: calc(49px * 6 + 7px);
     }
+
+    #footer{
+        display: flex;
+        justify-content: space-evenly;
+        width: calc(49px * 7 + 7px);
+    }
+
+    .drawDiv{
+        transform: translateX(-15%);
+    }
 }
 
 @media (min-width: 600px){
@@ -255,6 +291,21 @@ color: #FFECEC;
     .disc{
         width: 44px;
         height: 44px;
+    }
+
+    #footer{
+        display: flex;
+        justify-content: space-evenly;
+        width: calc(54px * 7 + 7px);
+    }
+
+    .drawDiv{
+        transform: translateX(-19%);
+    }
+
+    .victoryScreen{
+        width: calc(54px * 7 + 7px);
+        height: calc(54px * 6 + 7px);
     }
 }
 
@@ -282,5 +333,15 @@ color: #FFECEC;
         height: calc(64px * 6 + 7px);
         max-height: 100%;
         max-width: 100%;
+    }
+
+    #footer{
+        display: flex;
+        justify-content: space-evenly;
+        width: calc(60px * 7 + 7px);
+    }
+
+    .drawDiv{
+        transform: translateX(-24%);
     }
 }
