commitando correções tela de vitória

--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body{
     background-image: linear-gradient(315deg, #ABE9CD 0%, #3EADCF 74%);
 }
 
+main{
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .line{
     border-radius: 88.75px;
     width: 32px;
@@ -19,13 +26,6 @@ body{
     box-shadow: inset 0 0 0.4em rgb(53 53 53);
     background-color: white;
     border: 1px solid black;
-}
-
-main{
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #game-container{
@@ -75,18 +75,89 @@ h1{
     animation: errorAnimation .3s linear;
 }
 
-@keyframes errorAnimation {
-    0% {transform: translate(0);}
-    10% {transform: translate(-5px);}
-    20% {transform: translate(5px);}
-    30% {transform: translate(-5px);}
-    40% {transform: translate(5px);}
-    50% {transform: translate(-5px);}
-    60% {transform: translate(5px);}
-    70% {transform: translate(-5px);}
-    80% {transform: translate(5px);}
-    90% {transform: translate(-5px);}
-    100% {transform: translate(0);}   
+.disc {
+    position: relative;
+    border-radius: 50%;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    animation: yourAnimation 1s ease-in 0s normal none;
+}
+
+.disc[data-color="red"] {
+    background: radial-gradient(
+    #bd3e3e 0%, 
+    rgb(177, 23, 23) 100%);
+    border: ridge 5px #e44040;
+}
+
+.disc[data-color="black"] {
+    background: radial-gradient(
+    #202020 0%, 
+    rgb(24, 22, 22) 100%);
+    border: ridge 5px #4c4747;
+}
+
+.victoryScreen.hidden {
+    display: none;
+}
+
+.victoryScreen {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    animation: victoryScreenCall .5s ease-in-out 0s forwards;
+    /* z-index: -1; */
+    bottom: 50%;
+    transform: translateY(48%);
+    width: calc(40px * 7 + 7px);
+    height: calc(44px * 6 + 7px);
+    backdrop-filter: blur( 2.9px );
+    box-shadow: 0 5px 10px 0 rgba( 31, 38, 135, 0.37 );
+    border-radius: 20px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    animation: victoryScreenBlue 1s linear 0.5s forwards;
+}
+
+.playersDiv {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.player1, .player2 {
+    border-radius: 88.75px;
+    width: 32px;
+    height: 32px;
+    position: relative;
+    border-radius: 50%;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.player1 {
+    background: radial-gradient(
+    #bd3e3e 0%, 
+    rgb(177, 23, 23) 100%);
+    border: ridge 5px #e44040;
+}
+
+.player2 {
+    background: radial-gradient(
+    #202020 0%, 
+    rgb(24, 22, 22) 100%);
+    border: ridge 5px #4c4747;
+}
+
+#playAgain {
+    width: 151px;
+    height: 49px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background: radial-gradient(50% 50% at 50% 50%, #FF0000 0%, rgba(3, 3, 3, 0.75) 100%);
+    border-radius: 16px;
+    text-align: center;
+    color: #FFECEC;
+    cursor: pointer;
 }
 
 @media (min-width: 425px){
@@ -111,6 +182,11 @@ h1{
         height: 249.68px;
         width: 9px;
     }
+
+    .victoryScreen {
+        width: calc(49px * 7 + 7px);
+        height: calc(49px * 6 + 7px);
+    }
 }
 
 @media (min-width: 600px){
@@ -134,6 +210,11 @@ h1{
     #game-container::after{
         height: 272.68px;
         width: 10px;
+    }
+
+    .victoryScreen {
+        width: calc(54px * 7 + 7px);
+        height: calc(54px * 6 + 7px);
     }
 }
 
@@ -164,28 +245,13 @@ h1{
         height: 301.68px;
         width: 11px;
     }
-}
 
-.disc {
-    position: relative;
-    border-radius: 50%;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    animation: yourAnimation 1s ease-in 0s normal none;
-}
-
-.disc[data-color="red"] {
-    background: radial-gradient(
-    #bd3e3e 0%, 
-    rgb(177, 23, 23) 100%);
-    border: ridge 5px #e44040;
-}
-
-.disc[data-color="black"] {
-    background: radial-gradient(
-    #202020 0%, 
-    rgb(24, 22, 22) 100%);
-    border: ridge 5px #4c4747;
+    .victoryScreen {
+        max-width: 100%;
+        max-height: 100%;
+        width: calc(60px * 7 + 7px);
+        height: calc(64px * 6 + 7px);
+    }
 }
 
 @keyframes yourAnimation {
@@ -215,23 +281,6 @@ h1{
     }
 }
 
-
-.victoryScreen {
-    position: absolute;
-    animation: victoryScreenCall .5s ease-in-out 0s forwards;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 50vw;
-    width: 89vw;
-    max-height: 350px;
-    max-width: 400px;
-    backdrop-filter: blur( 2.9px );
-    box-shadow: 0 5px 10px 0 rgba( 31, 38, 135, 0.37 );
-    border-radius: 5px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-}
-
 @keyframes victoryScreenCall {
     0.0%{
         transform: scale(0);
@@ -241,5 +290,27 @@ h1{
     }
     100%{
         transform: scale(1);
+    }
+}
+
+@keyframes errorAnimation {
+    0% {transform: translate(0);}
+    10% {transform: translate(-5px);}
+    20% {transform: translate(5px);}
+    30% {transform: translate(-5px);}
+    40% {transform: translate(5px);}
+    50% {transform: translate(-5px);}
+    60% {transform: translate(5px);}
+    70% {transform: translate(-5px);}
+    80% {transform: translate(5px);}
+    90% {transform: translate(-5px);}
+    100% {transform: translate(0);}   
+}
+
+@keyframes victoryScreenBlur {
+    to {
+        display: block;
+        opacity: 1;
+        z-index: 1;
     }
 }
